# ray-tracing-part-1

./: .gitignore  CMakeLists.txt  clean.sh  compileScript.sh  genImage.sh  main.cpp
include/: Camera.hpp  Color.hpp  Dielectric.hpp  Diffused_Material.hpp  Hittable.hpp  Hittable_list.hpp  Material.hpp  Metal.hpp  Ray.hpp  Ray_tracing.hpp  Sphere.hpp  Vec3D.hpp
src/: Dielectric.cpp  Hittable_list.cpp  camera.cpp  color.cpp  diffused_material.cpp  metal.cpp  ray.cpp  spehere.cpp  vec3D.cpp
